--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.1",
+    "axios": "^1.5.0",
+    "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
 }
